example/array.co
fun bar(x &[int]) int

fun foo() int
  // a [int 3]
  const b [int 3] = [0,1,2]
  // r1 = &a // type: mut&[int] (since a is mutable)
  // r2 = &b // type: &[int] (since b is immutable)
  // // r3 [int] = &a // error: cannot use expression of type A; expected type B
  // // r3 &[i8] = &a // error: cannot use expression of type A; expected type B
  // r3 &[int] = &a
  // r4 &[int] = &b
  // r5 mut&[int] = &a
  r6 mut&[int] = &b // error: b is not mutable  -- TODO --

  // s [int]

  //bad1 mut&[int] = a // error: cannot initialize reference with value of type [int]
  //bad2 [int] = &a // error: cannot initialize variable with reference
  0
  // x [3]int
  // x = [u16 3](0, 0, 0)
  // y = [u16 3](0, 0, 0)
  // x[1] + y[0]
  // x

  // t = (1, 2, 3)
  // y = 3
  // // y

// one = 1


// fun invert(color [3]int) nil {
//   red = color[0]
//   // color[0] = 255 - color[0]
//   // color[1] = 255 - color[1]
//   // color[2] = 255 - color[2]
// }

// fun main() {
//   // x = i8(4)
//   color = [3]int(255, 30, 0)
//   // invert(color)
//   // x
//   color
// }


// multi-dimensional array
// color2 [3][2]int = [[255, 255], [30, 255], [0, 255]]

// // array of size defined by constant expression
// array [acap]int // == (0,0,0,0)
// acap = acap1
// acap1 = 4 * acap2
// acap2 = 2 as int8

// array = [4]int()  // == (0,0,0,0)

// slice = []int(1, 2, 3)
